[package]
name = "linux-syscall"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Linux syscalls implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "1.3"
numeric-enum-macro = "0.2"
static_assertions = "1.1.0"
zircon-object = { git = "https://github.com/kern-crates/zcore-zircon-object.git", rev = "b2d6cd0d" }
linux-object = { git = "https://github.com/kern-crates/zcore-linux-object.git", rev = "9519c6dc" }
kernel-hal = { git = "https://github.com/kern-crates/zcore-kernel-hal.git", rev = "9f880544", default-features = false }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitvec = { version = "0.22", default-features = false, features = ["alloc"] }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await",
] }

[dev-dependencies]
async-std = { version = "1.10", features = ["unstable"] }
